Fix a null Frame* in form_tracker.

The nullptr was added in a past refactoring before
UserActivationV2 was ready.  Test failures with v2
enabled exposed the problem.

Bug: 816527
Change-Id: Ia94fb85831c9ca312d45695e10cb0701c836153a
Reviewed-on: https://chromium-review.googlesource.com/937659
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Commit-Queue: Mustaq Ahmed <mustaq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540205}
Former-commit-id: f6b03c4dbcefe420139d662a1898b5051d53a807